Message Context Menu: Fix wrong size for backdrop (#525)

--- a/src/components/middle/message/ContextMenuContainer.scss
+++ b/src/components/middle/message/ContextMenuContainer.scss
@@ -3,9 +3,9 @@
     content: '';
     position: fixed;
     top: 0;
-    right: 0;
-    bottom: 0;
     left: 0;
+    width: 100vw;
+    height: 100vh;
     z-index: var(--z-message-context-menu);
     background-color: rgba(0, 0, 0, .25);
     opacity: 0;
